--- a/Task6_1.ipynb
+++ b/Task6_1.ipynb
@@ -340,179 +340,171 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mount Google Drive\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "\n",
-    "# Imports\n",
     "import os\n",
     "import json\n",
     "import csv\n",
-    "from fmm import (\n",
-    "    Network,\n",
-    "    NetworkGraph,\n",
-    "    UBODTGenAlgorithm,\n",
-    "    UBODT,\n",
-    "    FastMapMatch,\n",
-    "    FastMapMatchConfig,\n",
-    "    STMATCH,\n",
-    "    STMATCHConfig\n",
-    ")\n",
+    "from fmm import (Network, NetworkGraph, UBODTGenAlgorithm, UBODT,\n",
+    "                 FastMapMatch, FastMapMatchConfig, STMATCH, STMATCHConfig)\n",
     "\n",
+    "def main():\n",
+    "    # Constants and configurations\n",
+    "    NETWORK_PATH = \"/content/data/porto/edges.shp\"\n",
+    "    NETWORK_ID_FIELD = \"fid\"\n",
+    "    NETWORK_SOURCE_FIELD = \"u\"\n",
+    "    NETWORK_TARGET_FIELD = \"v\"\n",
+    "    UBODT_PATH = \"/content/data/ubodt.txt\"\n",
+    "    UBODT_DELTA = 0.03\n",
+    "    USE_OMP = True\n",
+    "    TRAIN_DATA_PATH = \"/content/data/train-1500-cleaned.csv\"\n",
+    "    OUTPUT_CSV_PATH = \"/content/data/matched-results-1500_cleaned.csv\"\n",
     "\n",
+    "    # Read network data\n",
+    "    network = Network(NETWORK_PATH, NETWORK_ID_FIELD, NETWORK_SOURCE_FIELD, NETWORK_TARGET_FIELD)\n",
+    "    print(f\"Nodes: {network.get_node_count()} Edges: {network.get_edge_count()}\")\n",
+    "    graph = NetworkGraph(network)\n",
     "\n",
-    "# Set up paths to save to Google Drive\n",
-    "google_drive_path = '/content/drive/My Drive'  # Adjust if your Google Drive path is different\n",
+    "    # Generate UBODT table\n",
+    "    print(\"Generating UBODT file...\")\n",
+    "    ubodt_gen = UBODTGenAlgorithm(network, graph)\n",
+    "    status = ubodt_gen.generate_ubodt(UBODT_PATH, UBODT_DELTA, binary=False, use_omp=USE_OMP)\n",
+    "    print(f\"UBODT generation status: {status}\")\n",
+    "    ubodt = UBODT.read_ubodt_csv(UBODT_PATH)\n",
     "\n",
-    "data_dir = '/content/data'\n",
+    "    # Create FMM model\n",
+    "    fmm_model = FastMapMatch(network, graph, ubodt)\n",
     "\n",
-    "save_dir = os.path.join(google_drive_path, 'data')\n",
+    "    # Define FMM map matching configurations\n",
+    "    fmm_config = FastMapMatchConfig()\n",
+    "    fmm_config.k = 16\n",
+    "    fmm_config.radius = 0.005\n",
+    "    fmm_config.gps_error = 0.0005\n",
     "\n",
-    "# Ensure the data directory exists\n",
-    "os.makedirs(data_dir, exist_ok=True)\n",
+    "    # Create STMATCH model\n",
+    "    stmatch_model = STMATCH(network, graph)\n",
     "\n",
-    "# Paths to your data and output files in Google Drive\n",
-    "network_file_path = os.path.join(data_dir, \"porto\", \"edges.shp\")\n",
-    "ubodt_file_path = os.path.join(data_dir, \"ubodt.txt\")\n",
-    "train_csv_path = os.path.join(data_dir, \"train-1500-cleaned.csv\")\n",
-    "output_csv_path = os.path.join(save_dir, \"matched-results-1500_cleaned.csv\")\n",
+    "    # Define STMATCH map matching configurations\n",
+    "    stmatch_config = STMATCHConfig()\n",
+    "    stmatch_config.k = 8\n",
+    "    stmatch_config.radius = 0.05\n",
+    "    stmatch_config.gps_error = 0.001\n",
+    "    stmatch_config.vmax = 0.003\n",
+    "    stmatch_config.factor = 1.5\n",
     "\n",
-    "# Read network data\n",
-    "network = Network(network_file_path, \"fid\", \"u\", \"v\")\n",
-    "print(\"Nodes {} edges {}\".format(network.get_node_count(), network.get_edge_count()))\n",
-    "graph = NetworkGraph(network)\n",
+    "    # Load trajectories\n",
+    "    trajectories = load_trajectories(TRAIN_DATA_PATH)\n",
     "\n",
-    "# Precompute UBODT table\n",
+    "    # Match trajectories\n",
+    "    matched_results = match_trajectories(trajectories, fmm_model, fmm_config, stmatch_model, stmatch_config)\n",
     "\n",
-    "print(\"Generate the ubodt file\")\n",
-    "ubodt_gen = UBODTGenAlgorithm(network, graph)\n",
-    "status = ubodt_gen.generate_ubodt(ubodt_file_path, 0.03, binary=False, use_omp=True)\n",
-    "print(f\"UBODT Generation Status: {status}\")\n",
-    "ubodt = UBODT.read_ubodt_csv(ubodt_file_path)\n",
+    "    # Save matched results\n",
+    "    save_matched_results(matched_results, OUTPUT_CSV_PATH)\n",
     "\n",
-    "# Create FMM model\n",
-    "fmm_model = FastMapMatch(network, graph, ubodt)\n",
+    "    print(f\"Results saved to {OUTPUT_CSV_PATH}\")\n",
     "\n",
-    "# Define map matching configurations for FMM\n",
-    "k = 16\n",
-    "radius = 0.005\n",
-    "gps_error = 0.0005\n",
-    "fmm_config = FastMapMatchConfig(k, radius, gps_error)\n",
-    "\n",
-    "# Create STMATCH model\n",
-    "stmatch_model = STMATCH(network, graph)\n",
-    "\n",
-    "# Define STMATCH map matching configurations\n",
-    "k_stmatch = 8\n",
-    "radius_stmatch = 0.01\n",
-    "gps_error_stmatch = 0.001\n",
-    "vmax = 0.003\n",
-    "factor = 1.5\n",
-    "stmatch_config = STMATCHConfig(k_stmatch, radius_stmatch, gps_error_stmatch, vmax, factor)\n",
-    "\n",
-    "# Read trajectory data from CSV\n",
-    "train1500 = []\n",
-    "with open(train_csv_path, \"r\", newline='') as csvfile:\n",
-    "    reader = csv.DictReader(csvfile)\n",
-    "    for row in reader:\n",
-    "        polyline_str = row.get(\"POLYLINE\")\n",
-    "        if polyline_str:\n",
-    "            try:\n",
-    "                row[\"POLYLINE\"] = json.loads(polyline_str)\n",
-    "            except json.JSONDecodeError:\n",
-    "                print(f\"Invalid POLYLINE format in row {row}\")\n",
+    "def load_trajectories(file_path):\n",
+    "    trajectories = []\n",
+    "    with open(file_path, \"r\", newline='') as csvfile:\n",
+    "        reader = csv.DictReader(csvfile)\n",
+    "        for row in reader:\n",
+    "            polyline_str = row.get(\"POLYLINE\")\n",
+    "            if polyline_str:\n",
+    "                try:\n",
+    "                    row[\"POLYLINE\"] = json.loads(polyline_str)\n",
+    "                except json.JSONDecodeError:\n",
+    "                    print(f\"Invalid POLYLINE format in row {row}\")\n",
+    "                    row[\"POLYLINE\"] = []\n",
+    "            else:\n",
     "                row[\"POLYLINE\"] = []\n",
-    "        else:\n",
-    "            row[\"POLYLINE\"] = []\n",
-    "        train1500.append(row)\n",
+    "            trajectories.append(row)\n",
+    "    return trajectories\n",
     "\n",
+    "def match_trajectories(trajectories, fmm_model, fmm_config, stmatch_model, stmatch_config):\n",
+    "    for i, trajectory in enumerate(trajectories):\n",
+    "        polyline = trajectory.get(\"POLYLINE\", [])\n",
+    "        if not polyline:\n",
+    "            print(f\"Empty POLYLINE for trajectory index {i}\")\n",
+    "            continue\n",
     "\n",
-    "for i, trajectory in enumerate(train1500):\n",
-    "    polyline = trajectory[\"POLYLINE\"]\n",
-    "    if not polyline:\n",
-    "        print(f\"Empty POLYLINE for trajectory index {i}\")\n",
-    "        continue\n",
+    "        # Convert polyline to WKT format\n",
+    "        wkt = \"LINESTRING(\" + \", \".join(f\"{point[0]} {point[1]}\" for point in polyline) + \")\"\n",
     "\n",
-    "    # Convert polyline to WKT format\n",
-    "    wkt = \"LINESTRING(\" + \",\".join([\"{} {}\".format(point[0], point[1]) for point in polyline]) + \")\"\n",
+    "        # Attempt matching with FMM\n",
+    "        result = fmm_model.match_wkt(wkt, fmm_config)\n",
+    "        trajectory[\"algo_type\"] = \"fmm\"\n",
     "\n",
-    "    # Try FMM\n",
-    "    result = fmm_model.match_wkt(wkt, fmm_config)\n",
-    "    train1500[i][\"MATCHING_ALGORITHM\"] = \"fmm\"\n",
+    "        # If FMM fails, attempt matching with STMATCH\n",
+    "        if not result.cpath:\n",
+    "            result = stmatch_model.match_wkt(wkt, stmatch_config)\n",
+    "            trajectory[\"algo_type\"] = \"stmatch\"\n",
+    "            if not result.cpath:\n",
+    "                print(f\"No match found for trajectory index {i}, WKT: {wkt}\")\n",
+    "                continue  # Skip to next trajectory\n",
     "\n",
-    "    if not list(result.cpath):\n",
-    "        # Try STMATCH if FMM fails\n",
-    "        result = stmatch_model.match_wkt(wkt, stmatch_config)\n",
-    "        train1500[i][\"MATCHING_ALGORITHM\"] = \"stmatch\"\n",
-    "        if not list(result.cpath):\n",
-    "            print(f\"No match found for trajectory index {i}, WKT: {wkt}\")\n",
-    "            continue  # Skip to next trajectory if no match found\n",
+    "        # Store matched results\n",
+    "        trajectory[\"MATCHED_RESULTS\"] = {\n",
+    "            \"id\": i,\n",
+    "            \"ogeom\": wkt,\n",
+    "            \"opath\": list(result.opath),\n",
+    "            \"error\": [c.error for c in result.candidates],\n",
+    "            \"offset\": [c.offset for c in result.candidates],\n",
+    "            \"length\": [c.length for c in result.candidates],\n",
+    "            \"spdist\": [c.spdist for c in result.candidates],\n",
+    "            \"duration\": [0] * len(result.candidates),  # Placeholder\n",
+    "            \"speed\": [0] * len(result.candidates),     # Placeholder\n",
+    "            \"pgeom\": result.pgeom.export_wkt(),\n",
+    "            \"cpath\": list(result.cpath),\n",
+    "            \"tpath\": list(result.indices),\n",
+    "            \"mgeom\": result.mgeom.export_wkt(),\n",
+    "            \"ep\": [c.ep for c in result.candidates],\n",
+    "            \"tp\": [c.tp for c in result.candidates],\n",
+    "            \"algo_type\": trajectory[\"algo_type\"],\n",
+    "            \"eid\": [c.edge_id for c in result.candidates],\n",
+    "            \"source\": [c.source for c in result.candidates],\n",
+    "            \"target\": [c.target for c in result.candidates]\n",
+    "        }\n",
+    "        print(f\"Processed trajectory index {i}\")\n",
+    "    return trajectories\n",
     "\n",
-    "    # Adding matched results according to your output field specifications\n",
-    "    train1500[i][\"MATCHED_RESULTS\"] = {\n",
-    "        \"id\": i,\n",
-    "        \"ogeom\": wkt,\n",
-    "        \"opath\": list(result.opath),\n",
-    "        \"error\": [c.error for c in result.candidates],\n",
-    "        \"offset\": [c.offset for c in result.candidates],\n",
-    "        \"length\": [c.length for c in result.candidates],\n",
-    "        \"spdist\": [c.spdist for c in result.candidates],\n",
-    "        \"duration\": [0] * len(result.candidates),  # Placeholder, replace with actual duration if available\n",
-    "        \"speed\": [0] * len(result.candidates),  # Placeholder, replace with actual speed if available\n",
-    "        \"pgeom\": result.pgeom.export_wkt(),\n",
-    "        \"cpath\": list(result.cpath),\n",
-    "        \"tpath\": list(result.indices),\n",
-    "        \"mgeom\": result.mgeom.export_wkt(),\n",
-    "        \"ep\": [c.ep for c in result.candidates],\n",
-    "        \"tp\": [c.tp for c in result.candidates],\n",
-    "        \"matching_algorithm\": train1500[i][\"MATCHING_ALGORITHM\"],\n",
-    "        \"eid\": [c.edge_id for c in result.candidates],\n",
-    "        \"source\": [c.source for c in result.candidates],\n",
-    "        \"target\": [c.target for c in result.candidates]\n",
-    "    }\n",
-    "    print(f\"Processed trajectory index {i}\")\n",
+    "def save_matched_results(trajectories, output_csv_path):\n",
+    "    output_dir = os.path.dirname(output_csv_path)\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# Save the results to a new CSV file\n",
-    "output_dir = os.path.dirname(output_csv_path)\n",
+    "    # Define CSV headers\n",
+    "    headers = [\"id\", \"ogeom\", \"opath\", \"error\", \"offset\", \"length\", \"spdist\", \"duration\", \"speed\",\n",
+    "               \"pgeom\", \"cpath\", \"tpath\", \"mgeom\", \"ep\", \"tp\", \"algo_type\", \"eid\", \"source\", \"target\"]\n",
     "\n",
-    "# Ensure the directory exists\n",
-    "os.makedirs(output_dir, exist_ok=True)\n",
+    "    with open(output_csv_path, \"w\", newline='') as csvfile:\n",
+    "        writer = csv.DictWriter(csvfile, fieldnames=headers)\n",
+    "        writer.writeheader()\n",
     "\n",
-    "# Define CSV headers based on the modified field names\n",
-    "headers = [\"id\", \"ogeom\", \"opath\", \"error\", \"offset\", \"length\", \"spdist\", \"duration\", \"speed\",\n",
-    "           \"pgeom\", \"cpath\", \"tpath\", \"mgeom\", \"ep\", \"tp\", \"MATCHING_ALGORITHM\", \"eid\", \"source\", \"target\"]\n",
+    "        for trajectory in trajectories:\n",
+    "            matched_results = trajectory.get(\"MATCHED_RESULTS\")\n",
+    "            if matched_results:\n",
+    "                flattened_row = {\n",
+    "                    \"id\": matched_results[\"id\"],\n",
+    "                    \"ogeom\": matched_results[\"ogeom\"],\n",
+    "                    \"opath\": json.dumps(matched_results[\"opath\"]),\n",
+    "                    \"error\": json.dumps(matched_results[\"error\"]),\n",
+    "                    \"offset\": json.dumps(matched_results[\"offset\"]),\n",
+    "                    \"length\": json.dumps(matched_results[\"length\"]),\n",
+    "                    \"spdist\": json.dumps(matched_results[\"spdist\"]),\n",
+    "                    \"duration\": json.dumps(matched_results[\"duration\"]),\n",
+    "                    \"speed\": json.dumps(matched_results[\"speed\"]),\n",
+    "                    \"pgeom\": matched_results[\"pgeom\"],\n",
+    "                    \"cpath\": json.dumps(matched_results[\"cpath\"]),\n",
+    "                    \"tpath\": json.dumps(matched_results[\"tpath\"]),\n",
+    "                    \"mgeom\": matched_results[\"mgeom\"],\n",
+    "                    \"ep\": json.dumps(matched_results[\"ep\"]),\n",
+    "                    \"tp\": json.dumps(matched_results[\"tp\"]),\n",
+    "                    \"algo_type\": matched_results[\"algo_type\"],\n",
+    "                    \"eid\": json.dumps(matched_results[\"eid\"]),\n",
+    "                    \"source\": json.dumps(matched_results[\"source\"]),\n",
+    "                    \"target\": json.dumps(matched_results[\"target\"])\n",
+    "                }\n",
+    "                writer.writerow(flattened_row)\n",
     "\n",
-    "with open(output_csv_path, \"w\", newline='') as csvfile:\n",
-    "    writer = csv.DictWriter(csvfile, fieldnames=headers)\n",
-    "    writer.writeheader()\n",
-    "\n",
-    "    for trajectory in train1500:  \n",
-    "        if \"MATCHED_RESULTS\" in trajectory:\n",
-    "            matched_results = trajectory[\"MATCHED_RESULTS\"]\n",
-    "            flattened_row = {\n",
-    "                \"id\": matched_results[\"id\"],\n",
-    "                \"ogeom\": matched_results[\"ogeom\"],\n",
-    "                \"opath\": json.dumps(matched_results[\"opath\"]),\n",
-    "                \"error\": json.dumps(matched_results[\"error\"]),\n",
-    "                \"offset\": json.dumps(matched_results[\"offset\"]),\n",
-    "                \"length\": json.dumps(matched_results[\"length\"]),\n",
-    "                \"spdist\": json.dumps(matched_results[\"spdist\"]),\n",
-    "                \"duration\": json.dumps(matched_results[\"duration\"]),\n",
-    "                \"speed\": json.dumps(matched_results[\"speed\"]),\n",
-    "                \"pgeom\": matched_results[\"pgeom\"],\n",
-    "                \"cpath\": json.dumps(matched_results[\"cpath\"]),\n",
-    "                \"tpath\": json.dumps(matched_results[\"tpath\"]),\n",
-    "                \"mgeom\": matched_results[\"mgeom\"],\n",
-    "                \"ep\": json.dumps(matched_results[\"ep\"]),\n",
-    "                \"tp\": json.dumps(matched_results[\"tp\"]),\n",
-    "                \"MATCHING_ALGORITHM\": matched_results[\"matching_algorithm\"],\n",
-    "                \"eid\": json.dumps(matched_results[\"eid\"]),\n",
-    "                \"source\": json.dumps(matched_results[\"source\"]),\n",
-    "                \"target\": json.dumps(matched_results[\"target\"])\n",
-    "            }\n",
-    "            writer.writerow(flattened_row)\n",
-    "\n",
-    "print(f\"Results saved to {output_csv_path}\")\n"
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
