clean up for submission

--- a/Task3.ipynb
+++ b/Task3.ipynb
@@ -1254,7 +1254,7 @@
     "                continue  # Skip to next trajectory\n",
     "\n",
     "        # Store matched results\n",
-    "        trajectory[\"MATCHED_RESULTS\"] = {\n",
+    "        trajectory[\"RESULTS\"] = {\n",
     "            \"id\": i,\n",
     "            \"ogeom\": wkt,\n",
     "            \"opath\": list(result.opath),\n",
@@ -1291,7 +1291,7 @@
     "        writer.writeheader()\n",
     "\n",
     "        for trajectory in trajectories:\n",
-    "            matched_results = trajectory.get(\"MATCHED_RESULTS\")\n",
+    "            matched_results = trajectory.get(\"RESULTS\")\n",
     "            if matched_results:\n",
     "                flattened_row = {\n",
     "                    \"id\": matched_results[\"id\"],\n",
