final clean up for submission

--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fc11d997-fee1-4c9c-8a25-a63b9830066a",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
     "    print(f\"Image saved to {output_path}\")\n",
     "\n",
     "# Run the function with the specified file path\n",
-    "visualize_first_15_routes(\"data/map_matching_1500.csv\")\n"
+    "visualize_first_15_routes(\"data/mapped-train-1500.csv\")\n"
    ]
   },
   {
@@ -289,7 +289,7 @@
     "\n",
     "    print(f\"Image saved to {output_path}\")\n",
     "\n",
-    "visualize_first_15_routes(\"data/map_matching.csv\", \"data/train-1500.csv\")\n"
+    "visualize_first_15_routes(\"data/mapped-train-1500.csv\", \"data/train-1500.csv\")\n"
    ]
   },
   {
@@ -573,7 +573,7 @@
     "\n",
     "# Run the function with the specified file path\n",
     "visualize_routes(\n",
-    "    file_path=\"data/map_matching_1500.csv\",\n",
+    "    file_path=\"data/mapped-train-1500.csv\",\n",
     "    save_combined=True,      \n",
     "    save_individual=True,    \n",
     "    plot_lines=True,         \n",
