--- a/Task5_4.ipynb
+++ b/Task5_4.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
     "    try:\n",
     "        print(\"Starting debug analysis...\")\n",
     "        \n",
-    "        file_path = \"Perry_Github/Urban_Assignment2/data/map_matching_1500.csv\"\n",
+    "        file_path = \"Perry_Github/Urban_Assignment2/data/mapped-train-1500.csv\"\n",
     "        print(\"\\nLoading trajectory data...\")\n",
     "        df = pd.read_csv(file_path)\n",
     "        print(f\"Loaded {len(df)} trajectories\")\n",
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
     "        print(\"Starting debug analysis...\")\n",
     "        \n",
     "        # Load trajectory data\n",
-    "        file_path = \"Perry_Github/Urban_Assignment2/data/map_matching_1500.csv\"\n",
+    "        file_path = \"Perry_Github/Urban_Assignment2/data/mapped-train-1500.csv\"\n",
     "        print(\"\\nLoading trajectory data...\")\n",
     "        df = pd.read_csv(file_path)\n",
     "        print(f\"Loaded {len(df)} trajectories\")\n",
@@ -1171,11 +1171,11 @@
     "    \"\"\"\n",
     "    Verify file structure and data format\n",
     "    \"\"\"\n",
-    "    file_path = \"Perry_Github/Urban_Assignment2/data/map_matching_1500.csv\"\n",
+    "    file_path = \"Perry_Github/Urban_Assignment2/data/mapped-train-1500.csv\"\n",
     "    \n",
     "    try:\n",
     "        if not os.path.exists(file_path):\n",
-    "            alternative_path = \"data/map_matching_1500.csv\"\n",
+    "            alternative_path = \"data/mapped-train-1500.csv\"\n",
     "            if os.path.exists(alternative_path):\n",
     "                file_path = alternative_path\n",
     "            else:\n",
@@ -1203,7 +1203,7 @@
     "        print(\"Starting debug analysis...\")\n",
     "        \n",
     "        # Load trajectory data\n",
-    "        file_path = \"Perry_Github/Urban_Assignment2/data/map_matching_1500.csv\"\n",
+    "        file_path = \"Perry_Github/Urban_Assignment2/data/mapped-train-1500.csv\"\n",
     "        print(\"\\nLoading trajectory data...\")\n",
     "        df = pd.read_csv(file_path)\n",
     "        print(f\"Loaded {len(df)} trajectories\")\n",
@@ -1362,7 +1362,7 @@
     "    \"\"\"\n",
     "    Test the data processing to verify correct handling\n",
     "    \"\"\"\n",
-    "    file_path = \"Perry_Github/Urban_Assignment2/data/map_matching_1500.csv\"\n",
+    "    file_path = \"Perry_Github/Urban_Assignment2/data/mapped-train-1500.csv\"\n",
     "    df = pd.read_csv(file_path)\n",
     "    \n",
     "    print(\"\\nTesting data processing...\")\n",
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,7 +1571,7 @@
     "        logging.info(\"Starting analysis...\")\n",
     "        \n",
     "        # Verify file path\n",
-    "        file_path = \"Perry_Github/Urban_Assignment2/data/map_matching_1500.csv\"\n",
+    "        file_path = \"Perry_Github/Urban_Assignment2/data/mapped-train-1500.csv\"\n",
     "        if not os.path.exists(file_path):\n",
     "            logging.error(f\"File not found: {file_path}\")\n",
     "            return None\n",
@@ -1647,7 +1647,7 @@
     "    \"\"\"\n",
     "    try:\n",
     "        results = analyze_and_visualize_map_matching(\n",
-    "            file_path=\"Perry_Github/Urban_Assignment2/data/map_matching_1500.csv\",\n",
+    "            file_path=\"Perry_Github/Urban_Assignment2/data/mapped-train-1500.csv\",\n",
     "            place='Porto, Portugal'\n",
     "        )\n",
     "\n",
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
     "                print(f\"- Time per 100m: {segment['time_per_100m']:.2f}s\")\n",
     "                print(f\"- Speed: {segment['speed_ms']:.2f}m/s\")\n",
     "        \n",
-    "        analyze_and_visualize_map_matching(\"map_matching_1500.csv\",\"Porto, Portugal\")\n"
+    "        analyze_and_visualize_map_matching(\"mapped-train-1500.csv\",\"Porto, Portugal\")\n"
    ]
   },
   {
